--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "ejs-locals": "^1.0.2",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "firebase-admin": "^8.9.2"
   }
 }
