--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "ejs": "^3.0.1",
     "ejs-locals": "^1.0.2",
     "express": "^4.16.2",
     "firebase-admin": "^8.9.2"
